--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,8 +35,11 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       }
-      <span>{{title}}
-        <a href="https://github.com/jpromocion/" target="_blank">jpromocion</a></span>
+      <span>
+        <h1>{{title}}
+        <a href="https://github.com/jpromocion/" target="_blank">jpromocion</a>
+        </h1>
+      </span>
     </mat-toolbar>
     <div class="sidenav-scroll-wrapper">
       <div class="sidenav-content">
