--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,7 @@ h1 {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   letter-spacing: 2px;
 }
 
@@ -62,6 +62,18 @@ h3 {
   display: flex;
   align-items: flex-start;
 }
+
+.divBoxBottom {
+  display: flex;
+  align-items: flex-end;
+}
+
+.divBoxMedio {
+  display: flex;
+  align-items: center;
+}
+
+
 
 
 /* FDunciona mucho mejor para forzar mopstrar horizontalmente pero dejando al tamaño de pantalla
@@ -156,3 +168,36 @@ https://stackoverflow.com/questions/46968990/angular-material-vertically-arrangi
   white-space: pre-line;
 }
 
+
+/** hacer el mat-table de angular responsive con scrollbar inferior
+ * https://stackoverflow.com/questions/75083751/angular-material-table-horizontal-scroll
+ *
+*/
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
+mat-table {
+ width: 1200px;
+ max-width: 1200px;
+ margin-bottom: 1rem;
+ display: table;
+ border-collapse: collapse;
+ margin: 0px;
+}
+mat-row,
+mat-header-row {
+  display: table-row;
+}
+mat-cell,
+mat-header-cell {
+  word-wrap: initial;
+  display: table-cell;
+  padding: 0px 5px;
+  line-break: unset;
+  width: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: middle;
+}
