Inclusion generador perfiles

--- a/src/app/genera-perfiles/genera-perfiles.component.html
+++ b/src/app/genera-perfiles/genera-perfiles.component.html
@@ -1,13 +1,11 @@
-<h2 class="tituloPrimerNivel">Perfil</h2>
+<h2>Perfil</h2>
 
 <div class="panelFluidoSegundoNivel">
+  <div class="grid-layout">
 
-
-  <div class="divBox">
-    <h3>Filtros</h3>
-  </div>
-
-  <div class="grid-layout-filtros">
+    <div class="caja c0">
+      <h3>Filtros</h3>
+    </div>
 
     <div class="caja c1">
       <label>Tipo perfil: </label>
