--- a/src/app/genera-coches/genera-coches.component.scss
+++ b/src/app/genera-coches/genera-coches.component.scss
@@ -1,6 +1,6 @@
 .grid-layout{
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
   margin: 10px;
 }
 
@@ -11,6 +11,3 @@
   margin: 5px;
 }
 
-.c0{
-  grid-column: 1 / span 2;
-}
