Incluida página acerca de

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,19 +25,22 @@ html, body, app-root, .app-frame {
 
 h1 {
   color: #eedee7;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  font-size: 2em;
+  //text-align: center;
+  //margin-top: 20px;
+  //margin-bottom: 20px;
   //text-transform: uppercase;
-  letter-spacing: 2px;
+  //letter-spacing: 2px;
 }
 
 h2 {
   color: #eedee7;
+  font-size: 1.5em;
 }
 
 h3 {
   color: #eedee7;
+  font-size: 1em;
 }
 
 
