Versión mostrada en el about

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,33 @@
-<h1>Jose Javier Gálvez Gómez</h1>
+
+
+
+<h1>Generadores de jpromocion</h1>
+
+
 <div class="panelFluidoSegundoNivel">
-  <h2>jpromocion</h2>
+  <section>
+    <h3>Versión</h3>
+    <div>
+      <p style="margin-left: 5px;">v.{{ version }}</p>
+    </div>
+  </section>
+  <br/>
+  <section>
+    <h3>GitHub</h3>
+    <div>
+      <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
+      <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">GitHub fuentes</a>
+    </div>
+  </section>
+
+</div>
+
+<br/>
+<br/>
+
+<h1>Autor</h1>
+<div class="panelFluidoSegundoNivel">
+  <h2>Jose Javier Gálvez Gómez (jpromocion)</h2>
 
   <img style="align:center;vertical-align: middle;width: 200px;height: 200px;border-radius: 50%;" src="/zapp_blanco.jpg" alt="logo">
 
