Mostrado en about de version tambien de la api rest

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,21 +6,33 @@
 
 <div class="panelFluidoSegundoNivel">
   <section>
-    <h3>Versión</h3>
-    <div>
-      <p style="margin-left: 5px;">v.{{ version }}</p>
-    </div>
+    <p style="margin-left: 5px;">Versión v.{{ versionApp }}</p>
   </section>
   <br/>
   <section>
     <h3>GitHub</h3>
     <div>
       <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-      <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">GitHub fuentes</a>
+      <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">angular-j-generadores-fe2</a>
     </div>
   </section>
 
+  <br/>
+  <section>
+    <h3>API REST fuente</h3>
+    <div>
+      <p style="margin-left: 5px;">Versión {{ versionApiRest }}</p>
+    </div>
+    <div>
+      <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
+      <a href="https://github.com/jpromocion/rest-j-generadores" target="_blank">rest-j-generadores</a>
+    </div>
+  </section>
+
+
 </div>
+
+
 
 <br/>
 <br/>
