Elevamos version a 1.0.1 por el cambio de pagina acerca de

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -41,7 +41,7 @@
 <div class="panelFluidoSegundoNivel">
   <h2>Jose Javier Gálvez Gómez (jpromocion)</h2>
 
-  <img style="align:center;vertical-align: middle;width: 200px;height: 200px;border-radius: 50%;" src="/zapp_blanco.jpg" alt="logo">
+  <img style="vertical-align: middle;width: 200px;height: 200px;border-radius: 50%;" src="/zapp_blanco.jpg" alt="logo">
 
   <br/>
 
@@ -53,9 +53,7 @@
         <h3>LinkedIn</h3>
         <div>
           <img src="/LI-In-Bug.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-          <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >
-          linkedin.com/in/josejgalvez
-          </a>
+          <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >linkedin.com/in/josejgalvez</a>
         </div>
       </section>
       <br/>
@@ -63,9 +61,7 @@
         <h3>GitHub</h3>
         <div>
           <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-          <a href="https://github.com/jpromocion"  target="_blank">
-            github.com/jpromocion
-          </a>
+          <a href="https://github.com/jpromocion"  target="_blank">github.com/jpromocion</a>
         </div>
       </section>
       <br/>
@@ -73,9 +69,7 @@
         <h3>Enviar email</h3>
         <div>
           <mat-icon>mail</mat-icon>
-          <a href="mailto:jpromocion@gmail.com" target="_blank" style="margin-left: 5px;">
-            jpromocion&#64;gmail.com
-          </a>
+          <a href="mailto:jpromocion@gmail.com" target="_blank" style="margin-left: 5px;">jpromocion&#64;gmail.com</a>
         </div>
       </section>
     </div>
