--- a/src/app/genera-numeros/genera-numeros.component.scss
+++ b/src/app/genera-numeros/genera-numeros.component.scss
@@ -44,9 +44,13 @@
   width: auto;
   height: auto;
   margin: 5px;
+  //background-color: yellow;
 }
 
 .pantalla{
   grid-column: 1 / span 5;
 }
 
+.filaGrado{
+  grid-column: auto / span 3;
+}
