--- a/src/app/genera-archivos/genera-archivos.component.html
+++ b/src/app/genera-archivos/genera-archivos.component.html
@@ -141,6 +141,26 @@
       </mat-card>
     </div>
 
+    <div class="caja c3">
+      <mat-card appearance="outlined">
+        <mat-card-header>Generar Zip</mat-card-header>
+        <mat-card-content>
+
+          <button type="button" mat-raised-button (click)="fileParamZipInput.click()" style="margin-top: 10px;margin-left: 5px;">Elegir archivo/s</button>
+          <input #fileParamZipInput type="file" hidden (change)="handleSubirFilesZip($event)" id="fileParamZip" multiple="multiple">
+          <span *ngIf="nombreArchivosZip != ''">{{nombreArchivosZip}}</span>
+
+          <div>
+            <button type="button"  mat-fab aria-label="Generar zip" (click)="onClickBotonZip()"
+              matTooltip="Pulsar para generar zip" matTooltipPosition="below">
+              <mat-icon>refresh</mat-icon>
+            </button>
+          </div>
+
+        </mat-card-content>
+      </mat-card>
+    </div>
+
   </div>
 
 </div>
