Nuevo aparatado "Colores"

--- a/src/app/genera-numeros/genera-numeros.component.html
+++ b/src/app/genera-numeros/genera-numeros.component.html
@@ -524,7 +524,7 @@
 
           <div>
             <mat-form-field style="width: 150px !important;margin-left: 5px;">
-              <mat-label>Área</mat-label>
+              <mat-label>Convertido</mat-label>
               <input matInput id="gradosResultado" type="text" [(ngModel)]="gradosResultado" readonly="true" style="text-align: end;" (click)="onSelectDato(gradosResultado)">
             </mat-form-field>
           </div>
@@ -568,7 +568,7 @@
 
           <div>
             <mat-form-field style="width: 400px !important;margin-left: 5px;">
-              <mat-label>Área</mat-label>
+              <mat-label>Convertido</mat-label>
               <input matInput id="baseResultado" type="text" [(ngModel)]="baseResultado" readonly="true" style="text-align: end;" (click)="onSelectDato(baseResultado)">
             </mat-form-field>
           </div>
@@ -606,7 +606,7 @@
 
           <div>
             <mat-form-field style="width: 150px !important;margin-left: 5px;">
-              <mat-label>Área</mat-label>
+              <mat-label>Convertido</mat-label>
               <input matInput id="arabigoResultado" type="text" [(ngModel)]="arabigoResultado" readonly="true" style="text-align: end;" (click)="onSelectDato(arabigoResultado)">
             </mat-form-field>
           </div>
