--- a/src/app/genera-localizacion/genera-localizacion.component.html
+++ b/src/app/genera-localizacion/genera-localizacion.component.html
@@ -185,64 +185,73 @@
       </mat-card>
     </div>
 
-    <div class="caja c4">
-      <mat-card appearance="outlined">
-        <mat-card-header>Domicilios</mat-card-header>
-        <mat-card-content>
 
-          <p style="margin-left: 10px;"><small><em>Genera un domicilio completamente aleatorio en CCAA, Provincia, Municipio, o selecciona en los bloques anterires una CCAA y provincia para generarlos dirigidos.</em></small></p>
-          <p style="margin-left: 10px;"><small><em>Adicionalmente en este bloque podrás filtrar por el Municipio concreto de una provincia sobre el que generar.</em></small></p>
+  </div>
 
-          <div>
-            <mat-form-field style="width: 200px !important;">
-              <mat-label>Cod. CCAA</mat-label>
-              <input matInput id="provinCodCCAADomi" type="text"  maxlength="2"  [(ngModel)]="provinCodCCAA" readonly="true">
-              <mat-icon matSuffix matTooltip="Auto-rellenado con la CCAA seleccionada en el bloque 'Provincias'.">help</mat-icon>
-            </mat-form-field>
 
-            <mat-form-field style="width: 200px !important;margin-left: 5px;">
-              <mat-label>Cod. Provincia</mat-label>
-              <input matInput id="muniCodProvinDomi" type="text"  maxlength="2"  [(ngModel)]="muniCodProvin" readonly="true">
-              <mat-icon matSuffix matTooltip="Auto-rellenado con la CCAA seleccionada en el bloque 'Municipios'.">help</mat-icon>
-            </mat-form-field>
+  <!--NOTA: sacamos fuera del grid-layout, porque dentro el table-responsive para la tabla de resultados que utilizamos para
+    que en caso de tabla grande aparezca el scroll horizonta.... aparece completamente en negro y no se ve bien.
+  -->
+  <div style="margin: 10px;">
 
-            <mat-form-field style="width: 200px !important;margin-left: 5px;">
-              <mat-label>Cod. Municipio</mat-label>
-              <input matInput id="direccionParamCodMuni" type="text"  maxlength="3" placeholder="001" [(ngModel)]="direccionParamCodMuni">
-              <mat-icon matSuffix matTooltip="Este valor si debe ser rellenado si se quiere filtrar las direcciones por municipio. El código de municipio está relacionado con la provincia, por lo que no tiene sentido por si solo. Puede copiarlo de uno de los resultados del bloque 'Municipios' tras filtrar una provincia.">help</mat-icon>
-            </mat-form-field>
+    <mat-card appearance="outlined">
+      <mat-card-header>Domicilios</mat-card-header>
+      <mat-card-content>
 
-            <mat-form-field style="width: 150px !important;margin-left: 5px;">
-              <mat-label>Num. generaciones</mat-label>
-              <input matInput id="direccionParamNumGenerar" type="number"  min="1" max="1000" placeholder="Número de generaciones" [(ngModel)]="direccionParamNumGenerar">
-              <mat-icon matSuffix matTooltip="Número de domicilios a obtener.">help</mat-icon>
-            </mat-form-field>
+        <p style="margin-left: 10px;"><small><em>Genera un domicilio completamente aleatorio en CCAA, Provincia, Municipio, o selecciona en los bloques anterires una CCAA y provincia para generarlos dirigidos.</em></small></p>
+        <p style="margin-left: 10px;"><small><em>Adicionalmente en este bloque podrás filtrar por el Municipio concreto de una provincia sobre el que generar.</em></small></p>
 
-          </div>
+        <div>
+          <mat-form-field style="width: 200px !important;">
+            <mat-label>Cod. CCAA</mat-label>
+            <input matInput id="provinCodCCAADomi" type="text"  maxlength="2"  [(ngModel)]="provinCodCCAA" readonly="true">
+            <mat-icon matSuffix matTooltip="Auto-rellenado con la CCAA seleccionada en el bloque 'Provincias'.">help</mat-icon>
+          </mat-form-field>
 
-          <div>
-            <label>Tipo letra: </label>
-            <mat-button-toggle-group name="tipoletra" aria-label="Tipo letra de campos texto" [(ngModel)]="tipoLetra"
-              style="margin-left: 10px;">
-              <mat-button-toggle value="s">Sin formato</mat-button-toggle>
-              <mat-button-toggle value="M">Mayúsculas</mat-button-toggle>
-              <mat-button-toggle value="m">Minúsculas</mat-button-toggle>
-              <mat-button-toggle value="c">Camel case</mat-button-toggle>
-            </mat-button-toggle-group>
+          <mat-form-field style="width: 200px !important;margin-left: 5px;">
+            <mat-label>Cod. Provincia</mat-label>
+            <input matInput id="muniCodProvinDomi" type="text"  maxlength="2"  [(ngModel)]="muniCodProvin" readonly="true">
+            <mat-icon matSuffix matTooltip="Auto-rellenado con la CCAA seleccionada en el bloque 'Municipios'.">help</mat-icon>
+          </mat-form-field>
 
-            <button type="button"  mat-fab style="margin-left: 5px;" aria-label="Generar domicilios" (click)="onClickBotonGeneraDomicilios()"
-              matTooltip="Pulsar para generar" matTooltipPosition="below">
-              <mat-icon>refresh</mat-icon>
-            </button>
-          </div>
+          <mat-form-field style="width: 200px !important;margin-left: 5px;">
+            <mat-label>Cod. Municipio</mat-label>
+            <input matInput id="direccionParamCodMuni" type="text"  maxlength="3" placeholder="001" [(ngModel)]="direccionParamCodMuni">
+            <mat-icon matSuffix matTooltip="Este valor si debe ser rellenado si se quiere filtrar las direcciones por municipio. El código de municipio está relacionado con la provincia, por lo que no tiene sentido por si solo. Puede copiarlo de uno de los resultados del bloque 'Municipios' tras filtrar una provincia.">help</mat-icon>
+          </mat-form-field>
 
-          <div [hidden]="!((direccionGenerado.data.length && direccionGenerado.data.length > 0))">
+          <mat-form-field style="width: 150px !important;margin-left: 5px;">
+            <mat-label>Num. generaciones</mat-label>
+            <input matInput id="direccionParamNumGenerar" type="number"  min="1" max="1000" placeholder="Número de generaciones" [(ngModel)]="direccionParamNumGenerar">
+            <mat-icon matSuffix matTooltip="Número de domicilios a obtener.">help</mat-icon>
+          </mat-form-field>
+
+        </div>
+
+        <div>
+          <label>Tipo letra: </label>
+          <mat-button-toggle-group name="tipoletra" aria-label="Tipo letra de campos texto" [(ngModel)]="tipoLetra"
+            style="margin-left: 10px;">
+            <mat-button-toggle value="s">Sin formato</mat-button-toggle>
+            <mat-button-toggle value="M">Mayúsculas</mat-button-toggle>
+            <mat-button-toggle value="m">Minúsculas</mat-button-toggle>
+            <mat-button-toggle value="c">Camel case</mat-button-toggle>
+          </mat-button-toggle-group>
+
+          <button type="button"  mat-fab style="margin-left: 5px;" aria-label="Generar domicilios" (click)="onClickBotonGeneraDomicilios()"
+            matTooltip="Pulsar para generar" matTooltipPosition="below">
+            <mat-icon>refresh</mat-icon>
+          </button>
+        </div>
+
+        <div [hidden]="!((direccionGenerado.data.length && direccionGenerado.data.length > 0))">
+          <div class="table-responsive">
             <table mat-table #sortDireccionGenerado="matSort" [dataSource]="direccionGenerado" matSort  (matSortChange)="announceSortChange($event)">
 
               <ng-container matColumnDef="direccionCompleta">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Completa</th>
                 <td mat-cell *matCellDef="let direccion">
-                  <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(direccion.direccionCompleta))"
+                  <button mat-flat-button class="botonFlatGrande" type="button" (click)="onSelectDato(transformaTexto(direccion.direccionCompleta))"
                   matTooltip="Pulsar para copiar" matTooltipPosition="below">
                     <span class="direcion">{{direccion.direccionCompleta | caseTransformer: tipoLetra}}</span>
                   </button>
@@ -252,9 +261,79 @@
               <ng-container matColumnDef="direccion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Dirección</th>
                 <td mat-cell *matCellDef="let direccion">
-                  <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(direccion.direccion + ', ' + direccion.numVia))"
+                  <button mat-flat-button class="botonFlatGrande" type="button" (click)="onSelectDato(transformaTexto(direccion.direccion))"
                   matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                    <span class="direccion">{{direccion.direccion | caseTransformer: tipoLetra}}, {{direccion.numVia}}</span>
+                    <span class="direccion">{{direccion.direccion | caseTransformer: tipoLetra}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="numVia">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Número</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(direccion.numVia)"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="numVia">{{direccion.numVia}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="kilometro">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Km</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(direccion.kilometro)"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="kilometro">{{direccion.kilometro}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="bloque">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Bloque</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(direccion.bloque)"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="bloque">{{direccion.bloque}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="portal">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Portal</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(direccion.portal)"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="portal">{{direccion.portal}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="escalera">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Escalera</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(direccion.escalera)"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="escalera">{{direccion.escalera}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="planta">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Planta</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(direccion.planta))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="planta">{{direccion.planta | caseTransformer: tipoLetra}}</span>
+                  </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="puerta">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Puerta</th>
+                <td mat-cell *matCellDef="let direccion">
+                  <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(direccion.puerta))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                    <span class="puerta">{{direccion.puerta | caseTransformer: tipoLetra}}</span>
                   </button>
                 </td>
               </ng-container>
@@ -338,13 +417,14 @@
               </mat-paginator>
             </div>
           </div>
+        </div>
 
-        </mat-card-content>
-      </mat-card>
-    </div>
-
+      </mat-card-content>
+    </mat-card>
 
   </div>
+
+
 
 </div>
 
